# type_defender

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: release.yml  rust.yml
resources/: afrikaans_words.txt  korean_words.txt
src/: main.rs
src/game/: end_screen.rs  game_screen.rs  home_screen.rs  mod.rs
